@@ -70,6 +70,7 @@ depth: 1
  * Correctly quote non-numeric primary keys on snippet inspect view (Sage Abdullah)
  * Prevent crash on snippet inspect view when displaying a null foreign key to an image (Sage Abdullah)
  * Ensure that pages in moderation show as "Live + In Moderation" in the page explorer rather than "Live + Draft" (Sage Abdullah)
+ * Prevent error when updating reference index for objects with a lazy ParentalKey-related object (Chris Shaw)
 
 ### Documentation
 
